css/style.css
/****** General ***********/
* {
    font-family: 'Raleway', sans-serif;
}

:root {
    --main-color: #0065FC;
    --main-bg-color: #F2F2F2;
    --filter-bg-color: #DEEBFF;
}

.fa-solid {
    color: var(--main-color);
}

body {
    display: flex;
    justify-content: center;
    margin-top: 0;
}

.main-container {
    width: 100%;
    max-width: 1440px;
    padding: 0 50px;
    box-sizing: border-box;
}

a {
    color: inherit;
    text-decoration: none;
}

.section-title {
    margin: 0;
    font-size: 22px;
}

.card {
    background-color: white;
    border-radius: 20px;
    padding: 5px;
    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
}

.card img {
    object-fit: cover;
}

.card-title {
    font-size: 16px;
}

.euro {
    font-weight: 700;
}

.neutral-star {
    color: var(--main-bg-color)
}

.topnav {
    height: 50px;
    text-align: center;
    vertical-align: bottom;
}

.topnav a {
    padding-top: 10px;
    float: left;
}

.topnav-right {
    float: right;
    display: flex;
    width: 381px;
    height: 19px;
    padding-left: 0px;
    justify-content: flex-end;
    align-items: flex-start;
    gap: 67px;
    flex-shrink: 0;
}

.topnav-right a {
    padding-top: 30px;
    width: 150px;
}

.topnav-right a:hover {
    color: var(--Blue, #0065FC);
    text-align: center;
    font-family: Raleway;
    font-size: 16px;
    font-style: normal;
    font-weight: 500;
    line-height: normal;
    cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path d="M0.391062 1.17721C0.508338 3.31052 1.07796 5.75097 1.83746 8.17467C3.49608 13.48 5.08209 18.8077 6.98642 24.0628L7.00318 24.1074C7.05344 24.247 7.13721 24.3811 7.25448 24.4928C7.66216 24.8837 8.30997 24.8669 8.70088 24.4593C9.08622 24.0572 9.46597 23.6551 9.8513 23.253C10.4042 22.728 10.957 22.2087 11.5099 21.6837C12.2694 20.9522 13.0289 20.215 13.7828 19.4778C15.9161 21.6223 18.0829 23.7277 20.3168 25.7549C21.3276 26.6707 22.3105 27.2906 22.6008 26.8606C22.6846 26.7378 22.6958 26.5591 22.6455 26.3468C22.8186 26.2854 23.0309 26.1793 23.2598 26.0397C24.4047 25.3584 25.583 24.4928 26.7669 23.5155C26.9847 23.3368 27.0127 23.0129 26.8339 22.7951L26.7669 22.7113C26.013 21.801 25.1865 20.8851 24.3321 19.986C22.5115 18.0817 20.6909 16.1718 18.8704 14.2674C20.6295 12.5753 22.3775 10.8664 24.0975 9.11846L24.1143 9.10171C24.2204 8.99002 24.3097 8.85599 24.36 8.69962C24.5443 8.15233 24.2427 7.55479 23.6954 7.37608C22.6567 7.02984 21.6124 6.69476 20.5625 6.37086C19.7639 6.08046 18.9709 5.78448 18.1723 5.49408C13.1015 3.66793 8.01398 1.90879 2.87061 0.40096C1.3907 -0.0290514 0.111834 -0.196588 0.0504043 0.322776C0.0336506 0.501482 0.150926 0.708111 0.379893 0.925909C0.385478 1.00409 0.385478 1.08786 0.391062 1.17721ZM2.37917 2.0149C5.00949 3.01454 7.65657 4.02534 10.326 4.91887C14.1793 6.20891 18.0494 7.43193 21.9195 8.6717C20.1436 10.2186 18.4124 11.8214 16.7036 13.4744C16.2847 13.8821 16.2735 14.5522 16.6812 14.9767L16.7091 15.0046C19.3618 17.741 22.1038 20.416 24.8067 23.1134C24.131 23.7835 23.4553 24.4481 22.7684 25.1071C22.6176 25.2523 22.4724 25.4868 22.3607 25.7046C22.1541 25.3472 21.8469 24.9395 21.456 24.5151C19.7416 22.6722 18.0215 20.8014 16.2289 19.0311C15.6313 18.4447 15.0282 17.8527 14.4306 17.2663L14.4139 17.2496C14.0621 16.9033 13.498 16.9145 13.1518 17.2663C11.5099 18.9473 9.88481 20.645 8.25412 22.3371L8.18152 22.1361C6.4894 15.2503 3.83673 8.50975 1.61967 1.69658C1.85422 1.80827 2.10552 1.91438 2.37917 2.0149Z"/></svg>'), auto;
    border-top: 2px solid #0065FC;
}

.clear-both {
    clear: both;
}

.header-title-section {
    color: #000;
    /* Title/Section */
    font-family: Raleway;
    font-size: 22px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
    padding-top: 53px;
}

.header-footer-link {
    color: #000;
    /* Footer/Link */
    font-family: Raleway;
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
    padding-top: 8px;
}

.search-location {
    display: flex;
    width: 332px;
    height: 49px;
    flex-shrink: 0;
    border-radius: 15px;
    border: 1px solid var(--Grey, #F2F2F2);
    background: var(--White, #FFF);
}

.svg-location-icon {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 50px;
    height: 49px;
    flex-shrink: 0;
    border-radius: 15px 0px 0px 15px;
    border: 1px solid var(--Grey, #F2F2F2);
    background: var(--Grey, #F2F2F2);
}

.search-location input {
    width: 332px;
    flex-shrink: 0;
    border: none;
    color: var(--Black, #000);
    font-family: Raleway;
    font-size: 18px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
    padding-left: 10px;
}

.search-location button {
    position: relative;
    left: -130px;
    display: inline-flex;
    height: 49px;
    padding: 15px 16px;
    align-items: center;
    gap: 10px;
    flex-shrink: 0;
    border-radius: 0px 15px 15px 0px;
    border: 2px solid var(--Blue, #0065FC);
    background: var(--Blue, #0065FC);
}

.search-filter {
    display: flex;
    align-items: center;
    gap: 40px;
    
}

.search-filter-item {
    display: inline-flex;
    padding: 4px 20px;
    align-items: flex-start;
    border-radius: 25px;
    border: 2px solid var(--grey-tint-2, #D9D9D9);
    transition: transform 0.4s; /*Ajoute une transition pour une animation en douceur */
} 

.search-filter-item :hover
{
    background-color: var(--Blue, #DEEBFF);
    transform: scale(1.2); /* Au survol, agrandissez le bouton à 1.2 fois sa taille d'origine */
}

.search-filter-item svg {
    padding: 10px 0px 10px 10px;
}

.search-filter-item label {
    display: flex;
    padding: 10px 0px 10px 10px;
    flex-direction: column;
    align-items: flex-start;
    gap: 10px;
}

/****** Hebergements And Populaires ***********/
.hebergements-and-populaires {
    display: flex;
    justify-content: space-between;
}

.hebergements-and-populaires section {
    background-color: var(--main-bg-color);
    border-radius: 20px;
    padding: 30px;
    box-sizing: border-box;
}

/****** Hebergements ***********/
.hebergements {
    width: 65%;
}

/****** Populaires ***********/
.populaires {
    width: 32%;
}

.populaires-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.populaires-cards .card {
    display: flex;
    margin-top: 33px;
}

.populaires-cards img {
    width: 33%;
    height: 136px;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
}

.populaires-cards .card-content {
    width: 67%;
    padding-left: 15px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-sizing: border-box;
}

.populaires-cards .card-title {
    margin-top: 10px;
    margin-bottom: 4px;
}

.populaires-cards .card-subtitle {
    margin: 0;
}

.populaires-cards .card-rating {
    margin-bottom: 5px;
}

.hebergements-cards {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between; /* Pour répartir les éléments horizontalement */
    align-content: space-between; /* Pour répartir les éléments verticalement */
    list-style: none;
    padding: 0;
    gap: 20px;
}

/*.hebergements-cards > * {
    width: calc(100% / 3) - 20px;
}*/

.hebergements-cards .card {
    width: 200px;
    height: 199px;
    flex-shrink: 0;
}

.hebergements-cards img {
    width: 100%;
    height: 136px;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}

.hebergements-cards .card-title {
    font-family: Raleway;
    font-size: 16px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
}

.hebergements-cards .card-subtitle {
    font-family: Raleway;
    font-size: 14px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
    padding-top: 3px;
}
.logo {

}

/* Le code ci-dessous correspond à la version responsive uniquement */

/****** Media queries ***********/
/* Medium devices (tablets, less/equal than 1024px) */
@media (max-width: 1024px) {
    .hebergements-and-populaires {
        flex-direction: column;
    }

    .hebergements {
        width: 100%;
    }

    .populaires {
        width: 100%;
        margin-top: 50px;
    }

    .populaires-cards {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }

    .populaires-cards a {
        width: 30%;
    }

    .populaires-cards .card-title {
        font-size: 14px;
    }

    .populaires-cards .card-subtitle {
        font-size: 13px;
    }
}

/* Small devices (phones, less than 768px) */
@media (max-width: 767.98px) {
    /* ... */
}

